--- a/JobService_Test/packages.config
+++ b/JobService_Test/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.9.4" targetFramework="net46" />
+  <package id="Autofac.WebApi2" version="4.3.1" targetFramework="net46" />
   <package id="Hangfire" version="1.7.11" targetFramework="net46" />
+  <package id="Hangfire.Autofac" version="2.3.1" targetFramework="net46" />
   <package id="Hangfire.Console" version="1.4.2" targetFramework="net46" />
   <package id="Hangfire.Core" version="1.7.11" targetFramework="net46" />
   <package id="Hangfire.SqlServer" version="1.7.11" targetFramework="net46" />
