--- a/JobService_Test/packages.config
+++ b/JobService_Test/packages.config
@@ -6,6 +6,7 @@
   <package id="Hangfire.Autofac" version="2.3.1" targetFramework="net46" />
   <package id="Hangfire.Console" version="1.4.2" targetFramework="net46" />
   <package id="Hangfire.Core" version="1.7.11" targetFramework="net46" />
+  <package id="Hangfire.RecurringJobExtensions" version="1.1.6" targetFramework="net46" />
   <package id="Hangfire.SqlServer" version="1.7.11" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net46" />
