--- a/JobService_Test/JobService_Test.csproj
+++ b/JobService_Test/JobService_Test.csproj
@@ -132,15 +132,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppService\BaseAppService.cs" />
+    <Compile Include="AppService\IAppService.cs" />
+    <Compile Include="AppService\ISampleService.cs" />
+    <Compile Include="AppService\SampleService.cs" />
     <Compile Include="App_Start\HangfireExtensions.cs" />
     <Compile Include="App_Start\Bootstrap.cs" />
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Jobs\IDependency.cs" />
     <Compile Include="Jobs\RecurringJobService.cs" />
-    <Compile Include="Job\IDependency.cs" />
-    <Compile Include="Job\TestJob.cs" />
+    <Compile Include="NullLogger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
